Isolate DatatypeConverter Usage
Closes gh-590